2 lab/k8s/PostService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postservice-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: postservice                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
     labels:
       app: postservice               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: postservice:latest     # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: postservice           # ім'я контейнеру
          ports:
            - containerPort: 80  # порт по якому можна звертатись до подu
