2 lab/k8s/PostService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postservice-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 8080         # порт по якому можна звератись до сервісу
      targetPort: 80 # порт контейнера
  selector:
    app: postservice
