2 lab/k8s/PostService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postservice-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/post
            pathType: "Prefix"
            backend:
              service:
                name: postservice-service
                port:
                  number: 8080
